flask pack update

--- a/flask-pack/Dockerfile
+++ b/flask-pack/Dockerfile
@@ -1,3 +1,7 @@
 FROM python:3.8
 
-RUN pip install Flask Flask-SocketIO eventlet
+RUN pip install Flask
+RUN pip install Flask-SocketIO
+RUN pip install eventlet
+RUN pip install requests
+RUN pip install libsass
