--- a/flask-pack-mini/Dockerfile
+++ b/flask-pack-mini/Dockerfile
@@ -1,4 +1,8 @@
 FROM python:3.8-alpine
 
+RUN pip install --upgrade pip
+
 RUN pip install Flask
+
 RUN pip install requests
+RUN pip install beautifulsoup4
