--- a/flask-pack/Dockerfile
+++ b/flask-pack/Dockerfile
@@ -1,7 +1,15 @@
 FROM python:3.8
 
+RUN pip install --upgrade pip
+
 RUN pip install Flask
+
+RUN pip install requests
+RUN pip install beautifulsoup4
+
+RUN pip install libsass
+
 RUN pip install Flask-SocketIO
 RUN pip install eventlet
-RUN pip install requests
-RUN pip install libsass
+
+RUN pip install pymongo
