flask pack plus update

--- a/flask-pack-plus/Dockerfile
+++ b/flask-pack-plus/Dockerfile
@@ -1,8 +1,17 @@
 FROM python:3.8
 
+RUN pip install --upgrade pip
+
 RUN pip install Flask
-RUN pip install Flask-SocketIO
-RUN pip install eventlet
+
 RUN pip install requests
 RUN pip install beautifulsoup4
+
 RUN pip install libsass
+
+RUN pip install Flask-SocketIO
+RUN pip install eventlet
+
+RUN pip install pymongo
+
+RUN pip install Flask-Mail
