--- a/flask-pack-mini/Dockerfile
+++ b/flask-pack-mini/Dockerfile
@@ -3,6 +3,9 @@ FROM python:3.8-alpine
 RUN pip install --upgrade pip
 
 RUN pip install Flask
+RUN pip install fire
+
+RUN pip install pymongo
 
 RUN pip install requests
 RUN pip install beautifulsoup4
