--- a/flask-pack/Dockerfile
+++ b/flask-pack/Dockerfile
@@ -3,13 +3,21 @@ FROM python:3.8
 RUN pip install --upgrade pip
 
 RUN pip install Flask
+RUN pip install fire
 
-RUN pip install requests
-RUN pip install beautifulsoup4
-
-RUN pip install libsass
+RUN pip install pymongo
 
 RUN pip install Flask-SocketIO
 RUN pip install eventlet
 
-RUN pip install pymongo
+RUN pip install Flask-Login
+
+RUN pip install libsass
+
+RUN pip install Scrapy
+RUN pip install requests
+RUN pip install beautifulsoup4
+
+RUN pip install sha256
+RUN pip install ecdsa
+RUN pip install rsa
