flask pack plus update

--- a/flask-pack-plus/Dockerfile
+++ b/flask-pack-plus/Dockerfile
@@ -3,15 +3,28 @@ FROM python:3.8
 RUN pip install --upgrade pip
 
 RUN pip install Flask
+RUN pip install numpy
+RUN pip install scipy
+RUN pip install fire
 
-RUN pip install requests
-RUN pip install beautifulsoup4
-
-RUN pip install libsass
+RUN pip install pymongo
 
 RUN pip install Flask-SocketIO
 RUN pip install eventlet
 
-RUN pip install pymongo
+RUN pip install Flask-Login
+
+RUN pip install libsass
 
 RUN pip install Flask-Mail
+
+RUN pip install Scrapy
+RUN pip install requests
+RUN pip install beautifulsoup4
+
+RUN pip install matplotlib
+RUN pip install altair
+
+RUN pip install sha256
+RUN pip install ecdsa
+RUN pip install rsa
