--- a/flask-pack-plus/requirements.txt
+++ b/flask-pack-plus/requirements.txt
@@ -27,6 +27,7 @@ importlib-metadata==1.3.0
 incremental==17.5.0
 itsdangerous==1.1.0
 Jinja2==2.10.3
+joblib==0.14.1
 jsonschema==3.2.0
 kiwisolver==1.1.0
 libsass==0.19.4
@@ -55,6 +56,7 @@ pytz==2019.3
 queuelib==1.5.0
 requests==2.22.0
 rsa==4.0
+scikit-learn==0.22
 scipy==1.4.1
 Scrapy==1.8.0
 service-identity==18.1.0
