flask-pack-mini:v5

--- a/flask-pack-mini/Dockerfile
+++ b/flask-pack-mini/Dockerfile
@@ -4,8 +4,14 @@ RUN pip install --upgrade pip
 
 RUN pip install Flask
 RUN pip install fire
+RUN pip install tqdm
+
+RUN pip install pytest
 
 RUN pip install pymongo
 
+RUN pip install httpie
 RUN pip install requests
 RUN pip install beautifulsoup4
+
+RUN pip install secure
