--- a/flask-pack/Dockerfile
+++ b/flask-pack/Dockerfile
@@ -4,6 +4,10 @@ RUN pip install --upgrade pip
 
 RUN pip install Flask
 RUN pip install fire
+RUN pip install tqdm
+RUN pip install python-dotenv
+
+RUN pip install pytest
 
 RUN pip install pymongo
 
@@ -11,13 +15,16 @@ RUN pip install Flask-SocketIO
 RUN pip install eventlet
 
 RUN pip install Flask-Login
+RUN pip install Flask-Session
 
 RUN pip install libsass
 
+RUN pip install httpie
 RUN pip install Scrapy
 RUN pip install requests
 RUN pip install beautifulsoup4
 
+RUN pip install secure
 RUN pip install sha256
 RUN pip install ecdsa
 RUN pip install rsa
