--- a/flask-pack-plus/requirements.txt
+++ b/flask-pack-plus/requirements.txt
@@ -1,73 +1,86 @@
-altair==4.0.0
+altair==4.1.0
 attrs==19.3.0
-Automat==0.8.0
-beautifulsoup4==4.8.1
+Automat==20.2.0
+beautifulsoup4==4.9.1
 blinker==1.4
-certifi==2019.11.28
-cffi==1.13.2
+cachelib==0.1
+certifi==2020.4.5.2
+cffi==1.14.0
 chardet==3.0.4
-Click==7.0
+click==7.1.2
 constantly==15.1.0
-cryptography==2.8
+cryptography==2.9.2
 cssselect==1.1.0
 cycler==0.10.0
 dnspython==1.16.0
-ecdsa==0.14.1
+ecdsa==0.15
 entrypoints==0.3
-eventlet==0.25.1
-fire==0.2.1
-Flask==1.1.1
-Flask-Login==0.4.1
+eventlet==0.25.2
+fire==0.3.1
+Flask==1.1.2
+Flask-Login==0.5.0
 Flask-Mail==0.9.1
-Flask-SocketIO==4.2.1
-greenlet==0.4.15
+Flask-Session==0.3.2
+Flask-SocketIO==4.3.0
+greenlet==0.4.16
+httpie==2.1.0
 hyperlink==19.0.0
-idna==2.8
-importlib-metadata==1.3.0
+idna==2.9
+importlib-metadata==1.6.1
 incremental==17.5.0
 itsdangerous==1.1.0
-Jinja2==2.10.3
-joblib==0.14.1
+Jinja2==2.11.2
+joblib==0.15.1
 jsonschema==3.2.0
-kiwisolver==1.1.0
-libsass==0.19.4
-lxml==4.4.2
+kiwisolver==1.2.0
+libsass==0.20.0
+lxml==4.5.1
 MarkupSafe==1.1.1
-matplotlib==3.1.2
+matplotlib==3.2.1
 monotonic==1.5
-more-itertools==8.0.2
-numpy==1.17.4
-pandas==0.25.3
-parsel==1.5.2
+more-itertools==8.3.0
+numpy==1.18.5
+packaging==20.4
+pandas==1.0.4
+parsel==1.6.0
+pluggy==0.13.1
 Protego==0.1.16
+py==1.8.1
 pyasn1==0.4.8
-pyasn1-modules==0.2.7
-pycparser==2.19
+pyasn1-modules==0.2.8
+pycparser==2.20
 PyDispatcher==2.0.5
-PyHamcrest==1.9.0
-pymongo==3.10.0
+Pygments==2.6.1
+PyHamcrest==2.0.2
+pymongo==3.10.1
 pyOpenSSL==19.1.0
-pyparsing==2.4.5
-pyrsistent==0.15.6
+pyparsing==2.4.7
+pyrsistent==0.16.0
+pytest==5.4.3
 python-dateutil==2.8.1
-python-engineio==3.11.1
-python-socketio==4.4.0
-pytz==2019.3
+python-dotenv==0.13.0
+python-engineio==3.13.0
+python-socketio==4.6.0
+pytz==2020.1
 queuelib==1.5.0
-requests==2.22.0
+requests==2.23.0
 rsa==4.0
-scikit-learn==0.22
+scikit-learn==0.23.1
 scipy==1.4.1
-Scrapy==1.8.0
+Scrapy==2.1.0
+secure==0.2.1
 service-identity==18.1.0
 sha256==0.1
-six==1.13.0
-soupsieve==1.9.5
+six==1.15.0
+soupsieve==2.0.1
 termcolor==1.1.0
+threadpoolctl==2.1.0
 toolz==0.10.0
-Twisted==19.10.0
-urllib3==1.25.7
-w3lib==1.21.0
-Werkzeug==0.16.0
-zipp==0.6.0
-zope.interface==4.7.1
+tqdm==4.46.1
+Twisted==20.3.0
+urllib3==1.25.9
+w3lib==1.22.0
+wcwidth==0.2.3
+Werkzeug==1.0.1
+zipp==3.1.0
+zope.interface==5.1.0
