flask pack docker update

--- a/flask-pack/Dockerfile
+++ b/flask-pack/Dockerfile
@@ -1,15 +1,8 @@
-FROM python:3.8
+FROM jgphilpott/flask-pack:mini
 
 RUN pip install --upgrade pip
 
-RUN pip install Flask
-RUN pip install fire
-RUN pip install tqdm
 RUN pip install python-dotenv
-
-RUN pip install pytest
-
-RUN pip install pymongo
 
 RUN pip install Flask-SocketIO
 RUN pip install eventlet
@@ -19,12 +12,8 @@ RUN pip install Flask-Session
 
 RUN pip install libsass
 
-RUN pip install httpie
 RUN pip install Scrapy
-RUN pip install requests
-RUN pip install beautifulsoup4
 
-RUN pip install secure
 RUN pip install sha256
 RUN pip install ecdsa
 RUN pip install rsa
