flask-pack requirements update

--- a/flask-pack-mini/requirements.txt
+++ b/flask-pack-mini/requirements.txt
@@ -1,31 +1,31 @@
-attrs==19.3.0
-beautifulsoup4==4.9.1
-certifi==2020.4.5.2
+attrs==20.2.0
+beautifulsoup4==4.9.3
+certifi==2020.6.20
 chardet==3.0.4
 click==7.1.2
 fire==0.3.1
 Flask==1.1.2
-httpie==2.1.0
-idna==2.9
-importlib-metadata==1.6.1
+httpie==2.2.0
+idna==2.10
+importlib-metadata==2.0.0
+iniconfig==1.1.1
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
-more-itertools==8.3.0
 packaging==20.4
 pluggy==0.13.1
-py==1.8.1
-Pygments==2.6.1
-pymongo==3.10.1
+py==1.9.0
+Pygments==2.7.2
+pymongo==3.11.0
 pyparsing==2.4.7
-pytest==5.4.3
-requests==2.23.0
+pytest==6.1.1
+requests==2.24.0
 secure==0.2.1
 six==1.15.0
 soupsieve==2.0.1
 termcolor==1.1.0
-tqdm==4.46.1
-urllib3==1.25.9
-wcwidth==0.2.3
+toml==0.10.1
+tqdm==4.50.2
+urllib3==1.25.11
 Werkzeug==1.0.1
-zipp==3.1.0
+zipp==3.3.2
