--- a/flask-pack-plus/requirements.txt
+++ b/flask-pack-plus/requirements.txt
@@ -1,86 +1,111 @@
+absl-py==0.10.0
 altair==4.1.0
-attrs==19.3.0
+astunparse==1.6.3
+attrs==20.2.0
 Automat==20.2.0
-beautifulsoup4==4.9.1
+beautifulsoup4==4.9.3
 blinker==1.4
-cachelib==0.1
-certifi==2020.4.5.2
-cffi==1.14.0
+cachelib==0.1.1
+cachetools==4.1.1
+certifi==2020.6.20
+cffi==1.14.3
 chardet==3.0.4
 click==7.1.2
 constantly==15.1.0
-cryptography==2.9.2
+cryptography==3.1.1
 cssselect==1.1.0
 cycler==0.10.0
 dnspython==1.16.0
-ecdsa==0.15
+ecdsa==0.16.0
 entrypoints==0.3
-eventlet==0.25.2
+eventlet==0.29.1
 fire==0.3.1
 Flask==1.1.2
 Flask-Login==0.5.0
 Flask-Mail==0.9.1
 Flask-Session==0.3.2
-Flask-SocketIO==4.3.0
-greenlet==0.4.16
-httpie==2.1.0
-hyperlink==19.0.0
-idna==2.9
-importlib-metadata==1.6.1
+Flask-SocketIO==4.3.1
+gast==0.3.3
+google-auth==1.22.1
+google-auth-oauthlib==0.4.1
+google-pasta==0.2.0
+greenlet==0.4.17
+grpcio==1.33.1
+h5py==2.10.0
+httpie==2.2.0
+hyperlink==20.0.1
+idna==2.10
+importlib-metadata==2.0.0
 incremental==17.5.0
+iniconfig==1.1.1
+itemadapter==0.1.1
+itemloaders==1.0.3
 itsdangerous==1.1.0
 Jinja2==2.11.2
-joblib==0.15.1
+jmespath==0.10.0
+joblib==0.17.0
 jsonschema==3.2.0
+Keras==2.4.3
+Keras-Preprocessing==1.1.2
 kiwisolver==1.2.0
-libsass==0.20.0
-lxml==4.5.1
+libsass==0.20.1
+lxml==4.6.1
+Markdown==3.3.2
 MarkupSafe==1.1.1
-matplotlib==3.2.1
-monotonic==1.5
-more-itertools==8.3.0
+matplotlib==3.3.2
 numpy==1.18.5
+oauthlib==3.1.0
+opt-einsum==3.3.0
 packaging==20.4
-pandas==1.0.4
+pandas==1.1.3
 parsel==1.6.0
+Pillow==8.0.1
 pluggy==0.13.1
 Protego==0.1.16
-py==1.8.1
+protobuf==3.13.0
+py==1.9.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
 PyDispatcher==2.0.5
-Pygments==2.6.1
+Pygments==2.7.2
 PyHamcrest==2.0.2
-pymongo==3.10.1
+pymongo==3.11.0
 pyOpenSSL==19.1.0
 pyparsing==2.4.7
-pyrsistent==0.16.0
-pytest==5.4.3
+pyrsistent==0.17.3
+pytest==6.1.1
 python-dateutil==2.8.1
-python-dotenv==0.13.0
-python-engineio==3.13.0
+python-dotenv==0.14.0
+python-engineio==3.13.2
 python-socketio==4.6.0
 pytz==2020.1
+PyYAML==5.3.1
 queuelib==1.5.0
-requests==2.23.0
-rsa==4.0
-scikit-learn==0.23.1
-scipy==1.4.1
-Scrapy==2.1.0
+requests==2.24.0
+requests-oauthlib==1.3.0
+rsa==4.6
+scikit-learn==0.23.2
+scipy==1.5.3
+Scrapy==2.4.0
 secure==0.2.1
 service-identity==18.1.0
 sha256==0.1
 six==1.15.0
 soupsieve==2.0.1
+tensorboard==2.3.0
+tensorboard-plugin-wit==1.7.0
+tensorflow==2.3.1
+tensorflow-estimator==2.3.0
 termcolor==1.1.0
 threadpoolctl==2.1.0
-toolz==0.10.0
-tqdm==4.46.1
+toml==0.10.1
+toolz==0.11.1
+tqdm==4.50.2
 Twisted==20.3.0
-urllib3==1.25.9
+urllib3==1.25.11
 w3lib==1.22.0
-wcwidth==0.2.3
 Werkzeug==1.0.1
-zipp==3.1.0
-zope.interface==5.1.0
+wrapt==1.12.1
+zipp==3.3.2
+zope.interface==5.1.2
