--- a/flask-pack/requirements.txt
+++ b/flask-pack/requirements.txt
@@ -1,68 +1,70 @@
-attrs==19.3.0
+attrs==20.2.0
 Automat==20.2.0
-beautifulsoup4==4.9.1
-cachelib==0.1
-certifi==2020.4.5.2
-cffi==1.14.0
+beautifulsoup4==4.9.3
+cachelib==0.1.1
+certifi==2020.6.20
+cffi==1.14.3
 chardet==3.0.4
 click==7.1.2
 constantly==15.1.0
-cryptography==2.9.2
+cryptography==3.1.1
 cssselect==1.1.0
 dnspython==1.16.0
-ecdsa==0.15
-eventlet==0.25.2
+ecdsa==0.16.0
+eventlet==0.29.1
 fire==0.3.1
 Flask==1.1.2
 Flask-Login==0.5.0
 Flask-Session==0.3.2
-Flask-SocketIO==4.3.0
-greenlet==0.4.16
-httpie==2.1.0
-hyperlink==19.0.0
-idna==2.9
-importlib-metadata==1.6.1
+Flask-SocketIO==4.3.1
+greenlet==0.4.17
+httpie==2.2.0
+hyperlink==20.0.1
+idna==2.10
+importlib-metadata==2.0.0
 incremental==17.5.0
+iniconfig==1.1.1
+itemadapter==0.1.1
+itemloaders==1.0.3
 itsdangerous==1.1.0
 Jinja2==2.11.2
-libsass==0.20.0
-lxml==4.5.1
+jmespath==0.10.0
+libsass==0.20.1
+lxml==4.6.1
 MarkupSafe==1.1.1
-monotonic==1.5
-more-itertools==8.3.0
 packaging==20.4
 parsel==1.6.0
 pluggy==0.13.1
 Protego==0.1.16
-py==1.8.1
+py==1.9.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
 PyDispatcher==2.0.5
-Pygments==2.6.1
+Pygments==2.7.2
 PyHamcrest==2.0.2
-pymongo==3.10.1
+pymongo==3.11.0
 pyOpenSSL==19.1.0
 pyparsing==2.4.7
-pytest==5.4.3
-python-dotenv==0.13.0
-python-engineio==3.13.0
+pytest==6.1.1
+python-dotenv==0.14.0
+python-engineio==3.13.2
 python-socketio==4.6.0
 queuelib==1.5.0
-requests==2.23.0
-rsa==4.0
-Scrapy==2.1.0
+requests==2.24.0
+rsa==4.6
+Scrapy==2.4.0
 secure==0.2.1
 service-identity==18.1.0
 sha256==0.1
 six==1.15.0
 soupsieve==2.0.1
 termcolor==1.1.0
-tqdm==4.46.1
+toml==0.10.1
+tqdm==4.50.2
 Twisted==20.3.0
-urllib3==1.25.9
+urllib3==1.25.11
 w3lib==1.22.0
-wcwidth==0.2.3
 Werkzeug==1.0.1
-zipp==3.1.0
-zope.interface==5.1.0
+zipp==3.3.2
+zope.interface==5.1.2
