--- a/pi-pack-mini/Dockerfile
+++ b/pi-pack-mini/Dockerfile
@@ -1,15 +1,19 @@
-FROM python:3.8-alpine
+FROM python:3.7
 
 RUN pip install --upgrade pip
 
 RUN pip install Flask
 RUN pip install fire
+RUN pip install tqdm
 
 RUN pip install pytest
 
 RUN pip install pymongo
 
 RUN pip install gpiozero
+RUN pip install RPi.GPIO
 
 RUN pip install guizero
 RUN pip install colorzero
+
+RUN pip install secure
