--- a/pi-pack-plus/Dockerfile
+++ b/pi-pack-plus/Dockerfile
@@ -1,34 +1,5 @@
-FROM python:3.8
+FROM jgphilpott/pi-pack:base
 
 RUN pip install --upgrade pip
 
-RUN pip install Flask
-RUN pip install numpy
-RUN pip install fire
-RUN pip install tqdm
-
-RUN pip install pytest
-
-RUN pip install pymongo
-
-RUN pip install gpiozero
-RUN git clone https://github.com/simonmonk/pi_analog.git
-WORKDIR /pi_analog
-RUN python3 setup.py install
-WORKDIR /
-
 RUN pip install sense-hat
-
-RUN pip install guizero
-RUN pip install colorzero
-
-RUN pip install Flask-SocketIO
-RUN pip install eventlet
-
-RUN pip install requests
-RUN pip install beautifulsoup4
-
-RUN pip install secure
-RUN pip install sha256
-RUN pip install ecdsa
-RUN pip install rsa
