--- a/pi-pack-mini/requirements.txt
+++ b/pi-pack-mini/requirements.txt
@@ -1,23 +1,27 @@
-attrs==19.3.0
+attrs==20.2.0
 click==7.1.2
 colorzero==1.1
 fire==0.3.1
 Flask==1.1.2
 gpiozero==1.5.1
 guizero==1.1.0
-importlib-metadata==1.6.1
+importlib-metadata==2.0.0
+iniconfig==1.1.1
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
-more-itertools==8.3.0
 packaging==20.4
+pkg-resources==0.0.0
 pluggy==0.13.1
-py==1.8.1
-pymongo==3.10.1
+py==1.9.0
+pymongo==3.11.0
 pyparsing==2.4.7
-pytest==5.4.3
+pytest==6.1.1
+RPi.GPIO==0.7.0
+secure==0.2.1
 six==1.15.0
 termcolor==1.1.0
-wcwidth==0.2.3
+toml==0.10.1
+tqdm==4.50.2
 Werkzeug==1.0.1
-zipp==3.1.0
+zipp==3.3.2
