--- a/pi-pack-plus/requirements.txt
+++ b/pi-pack-plus/requirements.txt
@@ -1,46 +1,50 @@
-attrs==19.3.0
-beautifulsoup4==4.9.1
-certifi==2020.4.5.2
+attrs==20.2.0
+beautifulsoup4==4.9.3
+certifi==2020.6.20
 chardet==3.0.4
 click==7.1.2
 colorzero==1.1
 dnspython==1.16.0
-ecdsa==0.15
-eventlet==0.25.2
+ecdsa==0.16.0
+eventlet==0.29.1
 fire==0.3.1
 Flask==1.1.2
-Flask-SocketIO==4.3.0
+Flask-SocketIO==4.3.1
 gpiozero==1.5.1
-greenlet==0.4.16
+greenlet==0.4.17
 guizero==1.1.0
-idna==2.9
-importlib-metadata==1.6.1
+idna==2.10
+importlib-metadata==2.0.0
+iniconfig==1.1.1
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
-monotonic==1.5
-more-itertools==8.3.0
-numpy==1.18.5
+numpy==1.19.2
 packaging==20.4
-Pillow==7.1.2
+PiAnalog==1.0
+picamera==1.13
+Pillow==8.0.1
+pkg-resources==0.0.0
 pluggy==0.13.1
-py==1.8.1
+py==1.9.0
 pyasn1==0.4.8
-pymongo==3.10.1
+pymongo==3.11.0
 pyparsing==2.4.7
-pytest==5.4.3
-python-engineio==3.13.0
+pytest==6.1.1
+python-dotenv==0.14.0
+python-engineio==3.13.2
 python-socketio==4.6.0
-requests==2.23.0
-rsa==4.0
+requests==2.24.0
+RPi.GPIO==0.7.0
+rsa==4.6
 secure==0.2.1
 sense-hat==2.2.0
 sha256==0.1
 six==1.15.0
 soupsieve==2.0.1
 termcolor==1.1.0
-tqdm==4.46.1
-urllib3==1.25.9
-wcwidth==0.2.3
+toml==0.10.1
+tqdm==4.50.2
+urllib3==1.25.11
 Werkzeug==1.0.1
-zipp==3.1.0
+zipp==3.3.2
