flask-pack-mini update

--- a/flask-series/flask-pack-mini/Dockerfile
+++ b/flask-series/flask-pack-mini/Dockerfile
@@ -1,17 +1,31 @@
-FROM python:3.7
+FROM ubuntu:latest
+
+RUN apt-get update
+RUN apt-get upgrade
+
+RUN DEBIAN_FRONTEND=noninteractive apt-get install -y \
+    python3.9 python3-pip
 
 RUN pip install --upgrade pip
 
 RUN pip install Flask
 RUN pip install fire
 RUN pip install tqdm
+RUN pip install hickory
+RUN pip install arrow
 
 RUN pip install pytest
 
 RUN pip install pymongo
+RUN pip install SQLAlchemy
+
+RUN pip install libsass
 
 RUN pip install httpie
 RUN pip install requests
+RUN pip install gazpacho
 RUN pip install beautifulsoup4
+
+RUN pip install Pillow
 
 RUN pip install secure
