--- a/flask-series/flask-pack-mini/requirements.txt
+++ b/flask-series/flask-pack-mini/requirements.txt
@@ -1,31 +1,45 @@
-attrs==20.2.0
-beautifulsoup4==4.9.3
-certifi==2020.6.20
-chardet==3.0.4
-click==7.1.2
-fire==0.3.1
-Flask==1.1.2
-httpie==2.2.0
-idna==2.10
-importlib-metadata==2.0.0
+arrow==1.2.0
+attrs==21.2.0
+beautifulsoup4==4.10.0
+certifi==2021.5.30
+charset-normalizer==2.0.6
+click==8.0.1
+dataclasses==0.8
+defusedxml==0.7.1
+fire==0.4.0
+Flask==2.0.1
+gazpacho==1.1
+greenlet==1.1.2
+hickory==1.0.0
+httpie==2.5.0
+idna==3.2
+importlib-metadata==4.8.1
 iniconfig==1.1.1
-itsdangerous==1.1.0
-Jinja2==2.11.2
-MarkupSafe==1.1.1
-packaging==20.4
-pluggy==0.13.1
-py==1.9.0
-Pygments==2.7.2
-pymongo==3.11.0
+itsdangerous==2.0.1
+Jinja2==3.0.1
+libsass==0.21.0
+MarkupSafe==2.0.1
+packaging==21.0
+Pillow==8.3.2
+pkg_resources==0.0.0
+pluggy==1.0.0
+py==1.10.0
+Pygments==2.10.0
+pymongo==3.12.0
 pyparsing==2.4.7
-pytest==6.1.1
-requests==2.24.0
-secure==0.2.1
-six==1.15.0
-soupsieve==2.0.1
+PySocks==1.7.1
+pytest==6.2.5
+python-dateutil==2.8.2
+requests==2.26.0
+requests-toolbelt==0.9.1
+secure==0.3.0
+six==1.16.0
+soupsieve==2.2.1
+SQLAlchemy==1.4.25
 termcolor==1.1.0
-toml==0.10.1
-tqdm==4.50.2
-urllib3==1.25.11
-Werkzeug==1.0.1
-zipp==3.3.2
+toml==0.10.2
+tqdm==4.62.3
+typing-extensions==3.10.0.2
+urllib3==1.26.7
+Werkzeug==2.0.1
+zipp==3.6.0
