--- a/flask-series/flask-pack-mini/Dockerfile
+++ b/flask-series/flask-pack-mini/Dockerfile
@@ -1,28 +1,11 @@
-FROM python:3.9
+FROM python:3.8
+
+ADD . /
+WORKDIR /
 
 RUN apt-get update
 RUN apt-get upgrade -y
 
 RUN pip install --upgrade pip
 
-RUN pip install Flask
-RUN pip install fire
-RUN pip install tqdm
-RUN pip install hickory
-RUN pip install arrow
-
-RUN pip install pytest
-
-RUN pip install pymongo
-RUN pip install SQLAlchemy
-
-RUN pip install libsass
-
-RUN pip install httpie
-RUN pip install requests
-RUN pip install gazpacho
-RUN pip install beautifulsoup4
-
-RUN pip install Pillow
-
-RUN pip install secure
+RUN pip install -r requirements.txt
