--- a/flask-series/flask-pack-base/Dockerfile
+++ b/flask-series/flask-pack-base/Dockerfile
@@ -1,19 +1,11 @@
 FROM jgphilpott/flask-pack:mini
 
+ADD . /
+WORKDIR /
+
+RUN apt-get update
+RUN apt-get upgrade -y
+
 RUN pip install --upgrade pip
 
-RUN pip install python-dotenv
-
-RUN pip install Flask-SocketIO
-RUN pip install eventlet
-
-RUN pip install Flask-Login
-RUN pip install Flask-Session
-
-RUN pip install libsass
-
-RUN pip install Scrapy
-
-RUN pip install sha256
-RUN pip install ecdsa
-RUN pip install rsa
+RUN pip install -r requirements.txt
