--- a/flask-series/flask-pack-base/requirements.txt
+++ b/flask-series/flask-pack-base/requirements.txt
@@ -1,11 +1,15 @@
+arrow==1.2.0
 attrs==20.2.0
 Automat==20.2.0
 beautifulsoup4==4.9.3
+boussole==2.0.0
 cachelib==0.1.1
 certifi==2020.6.20
 cffi==1.14.3
 chardet==3.0.4
 click==7.1.2
+colorama==0.4.4
+colorlog==6.4.1
 constantly==15.1.0
 cryptography==3.1.1
 cssselect==1.1.0
@@ -17,7 +21,9 @@ Flask==1.1.2
 Flask-Login==0.5.0
 Flask-Session==0.3.2
 Flask-SocketIO==4.3.1
-greenlet==0.4.17
+gazpacho==1.1
+greenlet==1.1.2
+hickory==1.0.0
 httpie==2.2.0
 hyperlink==20.0.1
 idna==2.10
@@ -34,9 +40,11 @@ lxml==4.6.1
 MarkupSafe==1.1.1
 packaging==20.4
 parsel==1.6.0
+Pillow==8.3.2
 pluggy==0.13.1
 Protego==0.1.16
 py==1.9.0
+pyaml==21.8.3
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
@@ -46,10 +54,13 @@ PyHamcrest==2.0.2
 pymongo==3.11.0
 pyOpenSSL==19.1.0
 pyparsing==2.4.7
+pytesseract==0.3.8
 pytest==6.1.1
+python-dateutil==2.8.2
 python-dotenv==0.14.0
 python-engineio==3.13.2
 python-socketio==4.6.0
+PyYAML==5.4.1
 queuelib==1.5.0
 requests==2.24.0
 rsa==4.6
@@ -59,12 +70,15 @@ service-identity==18.1.0
 sha256==0.1
 six==1.15.0
 soupsieve==2.0.1
+SQLAlchemy==1.4.25
 termcolor==1.1.0
 toml==0.10.1
 tqdm==4.50.2
 Twisted==20.3.0
+typing-extensions==3.10.0.2
 urllib3==1.25.11
 w3lib==1.22.0
+watchdog==2.1.6
 Werkzeug==1.0.1
 zipp==3.3.2
 zope.interface==5.1.2
