--- a/flask-series/flask-pack-plus/requirements.txt
+++ b/flask-series/flask-pack-plus/requirements.txt
@@ -1,16 +1,22 @@
-absl-py==0.10.0
+absl-py==0.14.1
 altair==4.1.0
+arrow==1.2.0
 astunparse==1.6.3
 attrs==20.2.0
 Automat==20.2.0
 beautifulsoup4==4.9.3
 blinker==1.4
+boussole==2.0.0
+cached-property==1.5.2
 cachelib==0.1.1
-cachetools==4.1.1
+cachetools==4.2.4
 certifi==2020.6.20
 cffi==1.14.3
 chardet==3.0.4
+clang==5.0
 click==7.1.2
+colorama==0.4.4
+colorlog==6.4.1
 constantly==15.1.0
 cryptography==3.1.1
 cssselect==1.1.0
@@ -25,13 +31,17 @@ Flask-Login==0.5.0
 Flask-Mail==0.9.1
 Flask-Session==0.3.2
 Flask-SocketIO==4.3.1
-gast==0.3.3
-google-auth==1.22.1
-google-auth-oauthlib==0.4.1
+flatbuffers==1.12
+gast==0.4.0
+gazpacho==1.1
+gensim==4.1.2
+google-auth==1.35.0
+google-auth-oauthlib==0.4.6
 google-pasta==0.2.0
-greenlet==0.4.17
-grpcio==1.33.1
-h5py==2.10.0
+greenlet==1.1.2
+grpcio==1.41.0
+h5py==3.1.0
+hickory==1.0.0
 httpie==2.2.0
 hyperlink==20.0.1
 idna==2.10
@@ -43,27 +53,32 @@ itemloaders==1.0.3
 itsdangerous==1.1.0
 Jinja2==2.11.2
 jmespath==0.10.0
-joblib==0.17.0
+joblib==1.0.1
 jsonschema==3.2.0
-Keras==2.4.3
+keras==2.6.0
 Keras-Preprocessing==1.1.2
-kiwisolver==1.2.0
+kiwisolver==1.3.1
 libsass==0.20.1
 lxml==4.6.1
-Markdown==3.3.2
+Markdown==3.3.4
 MarkupSafe==1.1.1
-matplotlib==3.3.2
-numpy==1.18.5
-oauthlib==3.1.0
+matplotlib==3.3.4
+nltk==3.6.3
+numpy==1.19.5
+oauthlib==3.1.1
 opt-einsum==3.3.0
 packaging==20.4
-pandas==1.1.3
+pandas==1.1.5
 parsel==1.6.0
-Pillow==8.0.1
+patsy==0.5.2
+Pillow==8.3.2
+plotly==5.3.1
 pluggy==0.13.1
+polyglot==16.7.4
 Protego==0.1.16
-protobuf==3.13.0
+protobuf==3.18.0
 py==1.9.0
+pyaml==21.8.3
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
@@ -73,38 +88,55 @@ PyHamcrest==2.0.2
 pymongo==3.11.0
 pyOpenSSL==19.1.0
 pyparsing==2.4.7
-pyrsistent==0.17.3
+pyrsistent==0.18.0
+pytesseract==0.3.8
 pytest==6.1.1
-python-dateutil==2.8.1
+python-dateutil==2.8.2
 python-dotenv==0.14.0
 python-engineio==3.13.2
 python-socketio==4.6.0
-pytz==2020.1
-PyYAML==5.3.1
+pytz==2021.3
+PyYAML==5.4.1
 queuelib==1.5.0
+regex==2021.9.30
 requests==2.24.0
 requests-oauthlib==1.3.0
 rsa==4.6
-scikit-learn==0.23.2
-scipy==1.5.3
+scikit-learn==0.24.2
+scipy==1.5.4
 Scrapy==2.4.0
+scrapy-wayback-machine==1.0.3
+seaborn==0.11.2
 secure==0.2.1
+selenium==3.141.0
 service-identity==18.1.0
 sha256==0.1
 six==1.15.0
+smart-open==5.2.1
 soupsieve==2.0.1
-tensorboard==2.3.0
-tensorboard-plugin-wit==1.7.0
-tensorflow==2.3.1
-tensorflow-estimator==2.3.0
+SQLAlchemy==1.4.25
+statsmodels==0.12.2
+tenacity==8.0.1
+tensorboard==2.6.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.0
+tensorflow==2.6.0
+tensorflow-estimator==2.6.0
+tensorflow-hub==0.12.0
 termcolor==1.1.0
-threadpoolctl==2.1.0
+threadpoolctl==3.0.0
 toml==0.10.1
 toolz==0.11.1
+torch==1.9.1
+torchtext==0.10.1
+torchvision==0.10.1
 tqdm==4.50.2
 Twisted==20.3.0
+typing-extensions==3.7.4.3
 urllib3==1.25.11
 w3lib==1.22.0
+watchdog==2.1.6
+wayback-machine-scraper==1.0.8
 Werkzeug==1.0.1
 wrapt==1.12.1
 zipp==3.3.2
