--- a/pi-series/pi-pack-mini/requirements.txt
+++ b/pi-series/pi-pack-mini/requirements.txt
@@ -1,27 +1,44 @@
+arrow==1.2.0
 attrs==20.2.0
+certifi==2021.10.8
+charset-normalizer==2.0.7
 click==7.1.2
 colorzero==1.1
+defusedxml==0.7.1
 fire==0.3.1
 Flask==1.1.2
+gazpacho==1.1
 gpiozero==1.5.1
 guizero==1.1.0
+hickory==1.0.0
+httpie==2.5.0
+idna==3.2
 importlib-metadata==2.0.0
 iniconfig==1.1.1
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
 packaging==20.4
-pkg-resources==0.0.0
+Pillow==8.3.2
 pluggy==0.13.1
 py==1.9.0
+Pygments==2.10.0
 pymongo==3.11.0
 pyparsing==2.4.7
+PySocks==1.7.1
 pytest==6.1.1
+python-dateutil==2.8.2
+requests==2.26.0
+requests-toolbelt==0.9.1
 RPi.GPIO==0.7.0
 secure==0.2.1
 six==1.15.0
+spidev==3.5
+SQLAlchemy==1.4.25
 termcolor==1.1.0
 toml==0.10.1
 tqdm==4.50.2
+typing-extensions==3.10.0.2
+urllib3==1.26.7
 Werkzeug==1.0.1
 zipp==3.3.2
