--- a/pi-series/pi-pack-base/Dockerfile
+++ b/pi-series/pi-pack-base/Dockerfile
@@ -1,21 +1,20 @@
 FROM jgphilpott/pi-pack:mini
 
+ADD . /
+WORKDIR /
+
+RUN apt-get update
+RUN apt-get upgrade -y
+
 RUN pip install --upgrade pip
-
-RUN pip install python-dotenv
-
-RUN pip install Flask-SocketIO
-RUN pip install Eventlet
-
-RUN pip install requests
-RUN pip install beautifulsoup4
+RUN pip install -r requirements.txt
 
 RUN git clone https://github.com/simonmonk/pi_analog.git
 WORKDIR /pi_analog
 RUN python3 setup.py install
 WORKDIR /
-RUN pip install  picamera
 
-RUN pip install sha256
-RUN pip install ecdsa
-RUN pip install rsa
+RUN git clone https://github.com/achilikin/RdSpi.git
+WORKDIR /RdSpi
+RUN make
+WORKDIR /
