--- a/pi-series/pi-pack-base/Dockerfile
+++ b/pi-series/pi-pack-base/Dockerfile
@@ -9,6 +9,8 @@ RUN apt-get upgrade -y
 RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
 
+# RUN apt-get install python3-fingerprint
+
 RUN git clone https://github.com/simonmonk/pi_analog.git
 WORKDIR /pi_analog
 RUN python3 setup.py install
