--- a/pi-series/pi-pack-base/requirements.txt
+++ b/pi-series/pi-pack-base/requirements.txt
@@ -1,47 +1,60 @@
+Adafruit-DHT==1.4.0
+arrow==1.2.0
 attrs==20.2.0
 beautifulsoup4==4.9.3
 certifi==2020.6.20
 chardet==3.0.4
 click==7.1.2
 colorzero==1.1
+defusedxml==0.7.1
 dnspython==1.16.0
 ecdsa==0.16.0
 eventlet==0.29.1
 fire==0.3.1
 Flask==1.1.2
 Flask-SocketIO==4.3.1
+gazpacho==1.1
 gpiozero==1.5.1
-greenlet==0.4.17
 guizero==1.1.0
+hickory==1.0.0
+httpie==2.5.0
+hx711==1.1.2.3
 idna==2.10
 importlib-metadata==2.0.0
 iniconfig==1.1.1
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
+mfrc522==0.0.7
 packaging==20.4
-PiAnalog==1.0
 picamera==1.13
-pkg-resources==0.0.0
+Pillow==8.3.2
 pluggy==0.13.1
 py==1.9.0
 pyasn1==0.4.8
+Pygments==2.10.0
 pymongo==3.11.0
 pyparsing==2.4.7
+PySocks==1.7.1
+pytesseract==0.3.8
 pytest==6.1.1
+python-dateutil==2.8.2
 python-dotenv==0.14.0
 python-engineio==3.13.2
 python-socketio==4.6.0
 requests==2.24.0
+requests-toolbelt==0.9.1
 RPi.GPIO==0.7.0
 rsa==4.6
 secure==0.2.1
-sha256==0.1
 six==1.15.0
 soupsieve==2.0.1
+spidev==3.5
+SQLAlchemy==1.4.25
 termcolor==1.1.0
 toml==0.10.1
 tqdm==4.50.2
+typing-extensions==3.10.0.2
 urllib3==1.25.11
 Werkzeug==1.0.1
 zipp==3.3.2
