pi-pack-plus update

--- a/pi-series/pi-pack-plus/Dockerfile
+++ b/pi-series/pi-pack-plus/Dockerfile
@@ -1,5 +1,10 @@
 FROM jgphilpott/pi-pack:base
 
-RUN pip install --upgrade pip
+ADD . /
+WORKDIR /
 
-RUN pip install sense-hat
+RUN apt-get update
+RUN apt-get upgrade -y
+
+RUN pip install --upgrade pip
+# RUN pip install sense-hat
