node pack mini update

--- a/node-series/node-series-mini/Dockerfile
+++ b/node-series/node-series-mini/Dockerfile
@@ -6,6 +6,6 @@ WORKDIR /usr/app
 RUN apt-get update
 RUN apt-get upgrade -y
 
-RUN apt-get install -y nano wget curl
+RUN apt-get install -y wget curl
 
 RUN npm install
